--- a/themes/hugo-bare-min-theme/layouts/_default/baseof.html
+++ b/themes/hugo-bare-min-theme/layouts/_default/baseof.html
@@ -130,6 +130,7 @@
                 {{ with $.Site.GetPage "page" "search" }}
                     {{ printf `%s <a href="%s"><strong>%s</strong></a>` "|" .Permalink (.Title | lower) | safeHTML }}
                 {{ end }}
+		| <a href="https://impl.dev">Aimee's Blog</a>
                 ]
             </div>
             <div style="clear: both;"></div> <!-- Clear floats -->
