add new notes, and changed code css

--- a/themes/hugo-bare-min-theme/layouts/_default/single.html
+++ b/themes/hugo-bare-min-theme/layouts/_default/single.html
@@ -2,8 +2,9 @@
 
 {{ partial "mathjax.html" }}
 
-<!-- Chroma Github theme CSS -->
-<link rel="stylesheet" href="{{ "css/github_chroma.css" | relURL }}" type="text/css" />
+<!-- Github theme CSS for code-->
+<link rel="stylesheet" href="{{ "css/syntax.css" | absURL }}" type="text/css" />
+
 {{ end }}
 
 {{ define "main" }}
