--- a/themes/hugo-bare-min-theme/layouts/_default/single.html
+++ b/themes/hugo-bare-min-theme/layouts/_default/single.html
@@ -1,9 +1,9 @@
 {{ define "head" }}
 
-{{ partial "mathjax.html" }}
+<!-- {{ partial "mathjax.html" }} -->
 
 <!-- Github theme CSS for code-->
-<link rel="stylesheet" href="{{ "css/syntax.css" | absURL }}" type="text/css" />
+<link rel="stylesheet" href="{{ "css/syntax.css" | absURL }}" type="text/css" /> 
 
 {{ end }}
 
