--- a/themes/hugo-bare-min-theme/layouts/_default/baseof.html
+++ b/themes/hugo-bare-min-theme/layouts/_default/baseof.html
@@ -39,7 +39,7 @@
           margin: 40px auto;
           max-width: 650px;
           line-height: 1.6;
-          font-size: 18px;
+          font-size: 16px;
           color: #444;
           padding: 0 10px;
       }
@@ -56,13 +56,14 @@
       .masthead-body {
           font-size: 0.8em;
       }
-      /* Code block style */
+      /* Code block style
+	 background-color: #f5f8fa;
+     */
       .highlight
-      .chroma {
-          font-size: 0.8em;
+      {
+          font-size: 0.9em;
 	  display: block;
 	  overflow: auto;
-	  background-color: #f5f8fa;
 	  padding: 16px;
       }     
       a:link,
