--- a/themes/hugo-bare-min-theme/layouts/_default/baseof.html
+++ b/themes/hugo-bare-min-theme/layouts/_default/baseof.html
@@ -59,8 +59,13 @@
       /* Code block style
 	 background-color: #f5f8fa;
      */
+      code {
+	  background-color: #f5f8fa;
+      }
       .highlight
+      .chroma
       {
+	  background-color: #f5f8fa;
           font-size: 0.9em;
 	  display: block;
 	  overflow: auto;
